detail on demand hover over scatter plot point, fix legend on map, better translate alignment on scatter plot

--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -89,23 +89,24 @@ h1{
 
 #legend{
   margin:0 10% 0 20px;
-  float:right;
+  /*float:right;*/
   background: #fff;
   border: 2px solid #ccc;
   padding:10px;
-  width: 230px;
-  height: 175px;
+  width: fit-content;
+  height: fit-content;
+  /*width: 230px;
+  height: 175px;*/
 }
-#legend div {
-  clear:both;
+#legend div .color{
+  display: inline-block;
   margin-right:10px;
   width:15px;
   height:15px;
-  float:left;
 }
+
 #legend label {
-  width: 200px;
-  float:left;
+  display: inline;
 }
 
 #container {
@@ -146,8 +147,4 @@ div.tooltip {
 
 input{
   font-size: 36pt;
-}
-
-.dot {
-  stroke: #000;
 }
